Updated URL variables to URIs. Also created a URIFactory interface that needs to be used instead of URI#resolve and URI#create.